@@ -14,6 +14,7 @@ from .word2vec import Word2Vec
 from .doc2vec import Doc2Vec
 from .ldamulticore import LdaMulticore
 from .phrases import Phrases
+from .normmodel import NormModel
 
 from . import wrappers
 
